# Rypton

./: .gitignore  Cargo.toml  LICENSE  README.md
scripts/: install.sh  uninstall.sh  update.sh
src/: audit.rs  cli.rs  crypto.rs  errors.rs  main.rs  report.rs  scanner.rs  system_guard.rs  tui_app.rs  vault.rs
